--- a/README.org
+++ b/README.org
@@ -19,11 +19,9 @@ specification. These are the main features:
 guile-json is freely available for download under the terms of the GNU
 Lesser General Public License version 3 (LGPLv3+).
 
-Download the latest tarball and untar it:
 
-- [[http://download.savannah.gnu.org/releases/guile-json/guile-json-0.6.0.tar.gz][guile-json-0.6.0.tar.gz]]
 
-If you are cloning the repository make sure you run this first:
+Clone the repository make sure you run this first:
 
     : $ autoreconf -vif
 
@@ -34,7 +32,7 @@ Then, run the typical sequence:
     : $ sudo make install
 
 Where <guile-prefix> should preferably be the same as your system Guile
-installation directory (e.g. /usr).
+installation directory (e.g. /usr/local).
 
 If everything installed successfully you should be up and running:
 
